--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.cm.good_reminder"
-        minSdkVersion 16
+        minSdkVersion 21 //Empezamos la version de android mas actuales estaba en 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -57,4 +57,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // TODO: Falta añadir una dependencia de google 22:10 https://www.youtube.com/watch?v=osp1WL7W9Wo
 }
+// TODO: Tambien falta otra liena
