--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^1.1.3
   firebase_analytics: ^8.0.3
   firebase_database: ^6.1.2
+  cloud_firestore: ^2.0.0
 
 dev_dependencies:
   flutter_test:
