--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_analytics: ^8.0.3
   firebase_database: ^6.1.2
   cloud_firestore: ^2.0.0
+  cloud_firestore_web: ^2.0.0
 
 dev_dependencies:
   flutter_test:
