--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_database: ^6.1.2
   cloud_firestore: ^2.0.0
   cloud_firestore_web: ^2.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
