--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^2.0.0
   cloud_firestore_web: ^2.0.0
   provider: ^5.0.0
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
