--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   cloud_firestore_web: ^2.0.0
   provider: ^5.0.0
   sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
+  url_launcher: ^6.0.4
+  share_plus: ^2.1.2
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
