--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,10 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
+  fonts:
+  - family: Lobster Two
+    fonts:
+      - asset: fonts/LobsterTwo-Regular.ttf
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
