--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.4
   share_plus: ^2.1.2
   path: ^1.8.0
+  table_calendar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
