--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   share_plus: ^2.1.2
   path: ^1.8.0
   table_calendar: ^3.0.0
+  intl: ^0.17.0
+  date_field: ^2.0.1
 
 dev_dependencies:
   flutter_test:
